--- a/static/css/pages/team.css
+++ b/static/css/pages/team.css
@@ -165,7 +165,7 @@
     margin: 0.6rem;
   }
 
-  .advisor-team-section .team-member, .individual-investors-section .team-member {
+  .community-team-section .team-member, .advisor-team-section .team-member, .individual-investors-section .team-member {
     margin:  0.5rem;
     padding: 0 0.5rem;
   }
