resize community team images

--- a/templates/team.html
+++ b/templates/team.html
@@ -382,7 +382,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
     </div>
   </section>
 
-  <section class="community-team-section grey-section">
+  <section class="advisor-team-section grey-section">
     <div class="container">
       <div class="row">
         <div class="col-12">
