update team on whitepaper

--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -411,26 +411,34 @@
     <div class="d-flex flex-sm-row flex-wrap align-items-center justify-content-around">
       <div class="team-member">
         <div class="headshot-wrapper">
-          <img src="/static/img/headshot-holly.jpg" class="headshot" alt="Holly Gu headshot" />
+          <img src="/static/img/headshot-zoe.jpg" class="headshot" alt="Zoe Hoang headshot" />
         </div>
         <div class="name">
-          {{ gettext("Holly Gu") }}
+          {{ gettext("Zoe Hoang") }}
         </div>
       </div>
       <div class="team-member">
         <div class="headshot-wrapper">
-          <img src="/static/img/headshot-june.png" class="headshot" alt="June Kim headshot" />
+          <img src="/static/img/headshot-spyros.jpg" class="headshot" alt="Spyros Kekos headshot" />
         </div>
         <div class="name">
-          {{ gettext("June Kim") }}
+          {{ gettext("Spyros Kekos") }}
         </div>
       </div>
       <div class="team-member">
         <div class="headshot-wrapper">
-          <img src="/static/img/headshot-yeongin.png" class="headshot" alt="Yeongin Lee headshot" />
+          <img src="/static/img/headshot-aaron.jpg" class="headshot" alt="Aaron Faulkner headshot" />
         </div>
         <div class="name">
-          {{ gettext("Yeongin Lee") }}
+          {{ gettext("Aaron Faulkner") }}
+        </div>
+      </div>
+      <div class="team-member">
+        <div class="headshot-wrapper">
+          <img src="/static/img/headshot-moises.png" class="headshot" alt="Moisés Sosa headshot" />
+        </div>
+        <div class="name">
+          {{ gettext("Moisés Sosa") }}
         </div>
       </div>
       <div class="team-member">
