--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -435,7 +435,7 @@
       </div>
       <div class="team-member">
         <div class="headshot-wrapper">
-          <img src="/static/img/headshot-moises.png" class="headshot" alt="Moisés Sosa headshot" />
+          <img src="/static/img/headshot-moises.jpg" class="headshot" alt="Moisés Sosa headshot" />
         </div>
         <div class="name">
           {{ gettext("Moisés Sosa") }}
