add amy to the team

--- a/templates/team.html
+++ b/templates/team.html
@@ -376,6 +376,23 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 </div>
               </div>
             </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-amy.jpg" class="headshot" alt="Amy Hockings headshot" />
+                </div>
+                <div class="name">{{ gettext("Amy Hockings") }}</div>
+                <div class="title">
+                  {{ gettext("Customer Support") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Amy has a decade of experience in customer service, sales and administration, and previously led recruitment for one of Australia’s largest charity fundraising organisations. She studied International Business and Linguistics at Griffith University in Brisbane.") }}
+                </div>
+              </div>
+            </div>
+
+
           </div>
         </div>
       </div>
