--- a/templates/team.html
+++ b/templates/team.html
@@ -387,7 +387,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Customer Support") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Amy has a decade of experience in customer service, sales and administration, and led recruitment for one of Australia’s largest charity organisations. She studied International Business and Linguistics at Griffith University.") }}
+                  {{ gettext("Amy has a decade of experience in customer service, sales and administration, and led recruitment for one of Australia’s largest charities. She studied International Business and Linguistics at Griffith University.") }}
                 </div>
               </div>
             </div>
