add amy to the team

--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -395,7 +395,7 @@
       <div class="col-md-4 mt-3 mr-auto">
         <div class="team-member">
           <div class="headshot-wrapper">
-            <img src="/static/img/headshot-amy.png" class="headshot" alt="Amy Hockings headshot" />
+            <img src="/static/img/headshot-amy.jpg" class="headshot" alt="Amy Hockings headshot" />
           </div>
           <div class="name">{{ gettext("Amy Hockings") }}</div>
           <div class="title">
